--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@
 .container {
 	max-width: 80%;
 	margin: 0 auto;
-	border: 1px solid black;
 }
 
 .nav {
@@ -116,7 +115,222 @@
 	padding: 15px;
 }
 
-#sambutan {
+#halaman {
 	width: 100%;
 	height: auto;
+	background-color: #fff;
+}
+
+.konten {
+	display: flex;
+	justify-content: center;
+	padding-top: 470px;
+	max-width: 80%;
+	margin: 0 auto;
+	flex-direction: column;
+}
+
+.kepsek {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	padding-left: 35%;
+	padding-right: 35%
+}
+
+.isi {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	padding-top: 30px;
+	padding-left: 120px;
+	padding-right: 120px;
+}
+
+.tombol {
+	display: flex;
+	justify-content: center;
+	margin: 0 auto;
+	width: 20%;
+	padding-top: 30px;
+}
+
+.tbl1 {
+	border: 1px solid #0093dd;
+	background-color: #0093dd;
+	padding:10px 20px;
+	margin-right: 10px;
+	color: white;
+	text-decoration: none;
+	border-radius: 5px;
+}
+
+.tbl1:hover {
+	background-color: transparent;
+	color: black;
+}
+
+.list {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	margin-top: 30px;
+}
+
+.list a {
+	text-decoration: none;
+	font-size: 20px;
+	color: #000;
+}
+
+.list a:hover {
+	color: #0093dd;
+}
+
+.list .fasilitas {
+	border-bottom: 5px solid #0093dd;
+	padding-left: 80px;
+	padding-right: 80px;
+	padding-bottom: 15px;
+	text-align: center;
+}
+
+.list .lokasi {
+	border-bottom: 5px solid #0093dd;
+	padding-left: 80px;
+	padding-right: 80px;
+	padding-bottom: 15px;
+	text-align: center;
+}
+
+.list .sejarah {
+	border-bottom: 5px solid #0093dd;
+	padding-left: 80px;
+	padding-right: 80px;
+	padding-bottom: 15px;
+	text-align: center;
+}
+
+.list .prestasi {
+	border-bottom: 5px solid #0093dd;
+	padding-left: 80px;
+	padding-right: 80px;
+	padding-bottom: 15px;
+	text-align: center;
+}
+
+.berita {
+	background-color: #f2f2f2;
+	margin-top: 25px;
+	padding-bottom: 20px;
+}
+
+.isi-berita {
+	display: flex;
+	justify-content: center;
+	max-width: 80%;
+	margin: 0 auto;
+	flex-direction: column;
+}
+
+.isi-berita a {
+	text-decoration: none;
+	font-size: 15px;
+	color: #0093dd;
+}
+
+.isi-berita a:hover {
+	color: #000;
+}
+
+.isi-berita h1 {
+	margin-top: 40px;
+	margin-bottom: 20px;
+}
+
+.list-berita {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+}
+
+.list-berita .b1 img {
+	width: 230px;
+	margin-bottom: 10px;
+}
+
+.list-berita .b2 img {
+	width: 230px;
+	margin-bottom: 10px;
+}
+
+.list-berita .b3 img {
+	width: 230px;
+	margin-bottom: 10px;
+}
+
+.list-berita .b4 img {
+	width: 230px;
+	margin-bottom: 10px;
+}
+
+.bawah {
+	background-color: #fff;
+	margin-top: 25px;
+}
+
+.kontak {
+	border-top: 5px solid #f2f2f2;
+	margin-top: 25px;
+	display: flex;
+	justify-content: center;
+	max-width: 80%;
+	margin: 0 auto;
+}
+
+.kontak a {
+	text-decoration: none;
+	font-size: 15px;
+	color: #424242;
+}
+
+.kontak a:hover {
+	color: #0093dd;;
+}
+
+.kontak .hal-umum {
+	width: 25%;
+	margin-top: 50px;
+}
+
+.kontak .hal-umum h3 {
+	margin-bottom: 15px;
+}
+
+.kontak .contact {
+	width: 25%;
+	margin-top: 50px;
+}
+
+.kontak .contact h3 {
+	margin-bottom: 15px;
+}
+
+.kontak .sosial {
+	width: 25%;
+	margin-top: 50px;
+}
+
+.kontak .sosial h3 {
+	margin-bottom: 15px;
+}
+
+.kontak .sosial img {
+	width: 50px;
+	float: left;
+	margin-right: 10px;
 }
